# picture-weather-station

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.secrets.template
components/tuanpmt__esp_epaper/: CMakeLists.txt  README.md  idf_component.yml
components/tuanpmt__esp_epaper/examples/esp32s3_photopainter/: sdkconfig.defaults
components/tuanpmt__esp_epaper/include/: epaper.h  epaper_config.h  epaper_panel.h
components/tuanpmt__esp_epaper/src/: epaper.c  epaper_common.c  epaper_common.h  epaper_registry.c  epaper_spi.c  epaper_spi.h
components/tuanpmt__esp_epaper/src/controllers/: acep_6color.c
design-check/: .gitignore  CMakeLists.txt  design-generator.cpp
esp32s3_photopainter/: CMakeLists.txt
esp32s3_photopainter/main/: CMakeLists.txt  XPowersCommon.tpp  app_main.c  idf_component.yml  power_bsp.cpp
main/: CMakeLists.txt  Kconfig.projbuild  XPowersLib.h  aht20_task.c  chart.cpp  chart.h  data-widget.slint  datastreams.h  dithering.cpp  dithering.h  epd_panel_adapter.cpp  epd_panel_adapter.h  epd_platform.cpp  epd_platform.h  fox_condition.h  hw_support.c  hw_support.cpp  hw_support.h  i2c_bsp.cpp  i2c_bsp.h  idf_component.yml  picture-weather-station.c  picture-weather-station.cpp  power_bsp.cpp  power_bsp.h  rtc_state.cpp  rtc_state.h  ruuvi_task.c  ruuvi_task.cpp  sensor_history.h  shtc3_task.c  weather-station.slint  weather_fetch.c  weather_fetch.cpp  web_task.cpp  wifi_helper.c  wifi_sta.c
mpy/: main.py  wind-fox.pbm
mpy.stubs/k10_base/: __init__.py
mpy.stubs/unihiker_k10/: screen.pyi
pict/: convert.bat
pict-src/: convert.bat  wind-fox-a.xcf
pict-src/svg/: readme.md
pict/svg/: readme.md
pict/svg_png/: readme.md
ui/: charge-indicator.slint  chart.slint  data-widget.slint  weather-icon.slint  weather-station.slint
