idf_component_register(
    SRCS
        "src/epaper.c"
        "src/epaper_spi.c"
        "src/epaper_common.c"
        "src/epaper_registry.c"
        "src/controllers/acep_6color.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        driver
        esp_driver_gpio
        esp_driver_spi
        esp_timer
    PRIV_REQUIRES
        esp_psram
)
